# cava-ci-test

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  draft.yml  manual-release.yml  merge.yml  publish.yml
src/cava_ci_test/: __init__.py  feat.py
tests/: test_placeholder.py
