[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { tag_regex = '^v?(?P<version>[0-9]+\.[0-9]+\.[0-9]+)$' }

[project]
name = "cava-ci-test"
dynamic = ["version"]
description = "Minimal package for end-to-end validation of cava-devops CI/CD pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # PILOT ONLY: throwaway dependency used to validate Dependabot's uv
    # ecosystem support end-to-end (see feat/lowest-direct-dependabot pilot).
    # Not a real dependency of this package -- remove once the pilot passes.
    "certifi>=2025.8.3",
    # PILOT ONLY: deliberately pinned to a version with a known advisory
    # (same CVE-2026-4539 already tracked in omop-emb's pygments>=2.20.0
    # comment) to validate Dependabot security updates end-to-end. Not a
    # real dependency of this package -- remove once the pilot passes.
    "pygments==2.19.2",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ty>=0.0.59",
]
