[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { tag_regex = '^v?(?P<version>[0-9]+\.[0-9]+\.[0-9]+)$' }

[project]
name = "cava-ci-test"
dynamic = ["version"]
description = "Minimal package for end-to-end validation of cava-devops CI/CD pipelines."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # PILOT ONLY: throwaway dependency used to validate the --frozen CI
    # install and the uv.lock pre-commit hook end-to-end. Not a real
    # dependency of this package -- remove once the pilot passes.
    "certifi>=2026.1.1",
]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true } }]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ty>=0.0.59",
]
